package Week3;

public class Mandolin {
    private MandolinSpec spec;

    public Mandolin(MandolinSpec spec) {
        this.spec = spec;
    }

    public MandolinSpec getSpec() {
        return spec;
    }
}
