@startuml
'https://plantuml.com/class-diagram


abstract class Instrument{
-serialNumber
-price

+addInstrument():
}

class Mandolin extends Instrument{

}

class InstrumentSpec {
-model
+getBuilder(): Builder
+getModel(): String
+getType():Type
+getBackWood():Wood
+getTopWood():Wood
+matches(InstrumentSpec):boolean


}

class Guitar extends Instrument{

}

class MandolinSpec extends InstrumentSpec{
-style

+getStyle(): style
+matches(MandalinSpec):boolean
}


class GuitarSpec extends InstrumentSpec{
-numStrings
+getNumStrings():int
+matches(GuitarSpec):boolean
}
class Inventory{
+addInstrument(String,double,spec)
+search(GuitarSpec): Guitar
+search(MandalinSpec): Mandolin

}


enum Wood {
ALDER
MAHOGANY
CEDAR
}
enum Type {
ELECTRIC
ACOUSTIC
}
enum Builder {
FENDER
COLLINGS
MARTIN
GIBSON
}
enum Style {
A
F
}


InstrumentSpec -- Builder
InstrumentSpec -- Type
InstrumentSpec -- Wood
MandolinSpec -- Style
Inventory o-- "0..*" Instrument : consists of

Wood --[Hidden] Builder
Builder --[Hidden] Type


Instrument "0..*" o- InstrumentSpec :has a


@enduml